Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
             </div>
 
             <div class="copyright">
-                <p>@ 2024, Tech2 etc - HTML CSS Ecommerce Template</p>
+                <p>@ 2024, BlackWhite PG Ecommerce Template</p>
             </div>
         </footer>
 
@@ -447,5 +447,6 @@
     </body>
 
 </html> 
+
 
  
